# piper_ros

./: .gitignore  .pre-commit-config.yaml  README.md  conda_install.sh  piper_ros.yaml  piper_ros_env.yaml  pixi.toml  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
src/piper_control_node/: README.md  package.xml  setup.cfg  setup.py
src/piper_control_node/piper_control_node/: __init__.py  _version.py  get_metadata.py  piper_control_node.py
src/piper_control_node/piper_control_node/teach_mode/: piper_grav_comp.xml  run_gather_data.py  teach_mode.py
src/piper_control_node/scripts/: run_piper_control_node
src/piper_control_ros2/: README.md  package.xml  pixi.toml  setup.cfg  setup.py
src/piper_control_ros2/piper_control_ros2/: __init__.py  _version.py  get_metadata.py  piper_control_node.py  piper_mocked_node.py
src/piper_control_ros2/piper_control_ros2/teach_mode/: run_gather_data.py  teach_mode.py
src/piper_puppeteering_node/: package.xml  setup.cfg  setup.py
src/piper_puppeteering_node/launch/: puppeteering_launch.py
src/piper_puppeteering_node/piper_puppeteering_node/: puppeteering_node.py
src/piper_puppeteering_node/scripts/: run_piper_puppeteering_node
