[project]
name = "piper_ros"
version = "1.0.0"
description = "A ROS2 interface to AgileX Piper arms."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy",
    "r2-transformations",
    "piper_control>=1.0.0",
    "piper_sdk>=0.2.19",
]

[project.urls]
Repository = "https://github.com/Reimagine-Robotics/piper_ros"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
