[project]
name = "piper_ros"
version = "1.2.2"
description = "A ROS2 interface to AgileX Piper arms."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "numpy",
    "r2-transformations",
    "piper_control>=1.3.4",
    "piper_sdk>=0.2.19",
]

[project.urls]
Repository = "https://github.com/Reimagine-Robotics/piper_ros"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
piper_control_node = "piper_control_ros2.piper_control_node:main"
piper_mocked_node = "piper_control_ros2.piper_mocked_node:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["piper_control_ros2", "piper_control_ros2.teach_mode", "piper_puppeteering_node"]

[tool.setuptools.package-dir]
piper_control_ros2 = "src/piper_control_ros2/piper_control_ros2"
piper_puppeteering_node = "src/piper_puppeteering_node/piper_puppeteering_node"
